--- a/installer/Orca.wxs
+++ b/installer/Orca.wxs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
+<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
   <Package
     Name="Orca"
     Manufacturer="vanthaita"
@@ -22,6 +22,9 @@
     <Feature Id="MainFeature" Title="Orca" Level="1">
       <ComponentGroupRef Id="OrcaComponents" />
     </Feature>
+
+    <ui:WixUI Id="WixUI_InstallDir" InstallDirectory="INSTALLDIR" />
+    <WixVariable Id="WixUILicenseRtf" Value="installer/License.rtf" />
 
     <ComponentGroup Id="OrcaComponents" Directory="INSTALLFOLDER">
       <Component Id="OrcaExeComponent" Guid="*">
