fix(installer): Allow same version upgrades in MSI

--- a/installer/Orca.wxs
+++ b/installer/Orca.wxs
@@ -9,7 +9,7 @@
     Compressed="yes"
     Scope="perMachine"
   >
-    <MajorUpgrade DowngradeErrorMessage="A newer version of Orca is already installed." />
+    <MajorUpgrade DowngradeErrorMessage="A newer version of Orca is already installed." AllowSameVersionUpgrades="yes" />
 
     <MediaTemplate EmbedCab="yes" />
 
