--- a/installer/Orca.wxs
+++ b/installer/Orca.wxs
@@ -9,9 +9,12 @@
     Compressed="yes"
     Scope="perMachine"
   >
-    <MajorUpgrade DowngradeErrorMessage="A newer version of Orca is already installed." AllowSameVersionUpgrades="yes" />
+    <MajorUpgrade DowngradeErrorMessage="A newer version of Orca is already installed." AllowSameVersionUpgrades="yes" AllowDowngrades="yes" />
 
     <MediaTemplate EmbedCab="yes" />
+
+    <Icon Id="OrcaAppIcon" SourceFile="client\app\favicon.ico" />
+    <Property Id="ARPPRODUCTICON" Value="OrcaAppIcon" />
 
     <StandardDirectory Id="ProgramFilesFolder">
       <Directory Id="INSTALLDIR" Name="Orca">
@@ -19,12 +22,18 @@
       </Directory>
     </StandardDirectory>
 
+    <StandardDirectory Id="ProgramMenuFolder">
+      <Directory Id="OrcaProgramMenuFolder" Name="Orca" />
+    </StandardDirectory>
+
     <Feature Id="MainFeature" Title="Orca" Level="1">
       <ComponentGroupRef Id="OrcaComponents" />
+      <ComponentGroupRef Id="OrcaShortcuts" />
     </Feature>
 
     <ui:WixUI Id="WixUI_InstallDir" InstallDirectory="INSTALLDIR" />
     <WixVariable Id="WixUILicenseRtf" Value="installer/License.rtf" />
+    <WixVariable Id="WixUIIcon" Value="client\app\favicon.ico" />
 
     <ComponentGroup Id="OrcaComponents" Directory="INSTALLFOLDER">
       <Component Id="OrcaExeComponent" Guid="*">
@@ -37,6 +46,19 @@
           Action="set"
           System="yes"
         />
+      </Component>
+    </ComponentGroup>
+
+    <ComponentGroup Id="OrcaShortcuts" Directory="OrcaProgramMenuFolder">
+      <Component Id="OrcaUninstallShortcutComponent" Guid="*">
+        <Shortcut
+          Id="OrcaUninstallShortcut"
+          Name="Uninstall Orca"
+          Target="[SystemFolder]msiexec.exe"
+          Arguments="/x [ProductCode]"
+        />
+        <RemoveFolder Id="OrcaProgramMenuFolderRemove" Directory="OrcaProgramMenuFolder" On="uninstall" />
+        <RegistryValue Root="HKCU" Key="Software\vanthaita\Orca" Name="Installed" Type="integer" Value="1" KeyPath="yes" />
       </Component>
     </ComponentGroup>
   </Package>
