refactor(installer): Streamline WiX UI references

--- a/installer/Orca.wxs
+++ b/installer/Orca.wxs
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs"
-     xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
+<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
   <Package
     Name="Orca"
     Manufacturer="vanthaita"
@@ -32,7 +31,7 @@
       <ComponentGroupRef Id="OrcaShortcuts" />
     </Feature>
 
-    <ui:UIRef Id="WixUI_InstallDir" />
+    <UIRef Id="WixUI_InstallDir" />
     <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
     <WixVariable Id="WixUILicenseRtf" Value="installer/License.rtf" />
     <WixVariable Id="WixUIBannerBmp" Value="client\app\favicon.ico" />
