refactor(installer): Migrate to ui:WixUI for install directory

--- a/installer/Orca.wxs
+++ b/installer/Orca.wxs
@@ -31,8 +31,7 @@
       <ComponentGroupRef Id="OrcaShortcuts" />
     </Feature>
 
-    <UIRef Id="WixUI_InstallDir" />
-    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
+    <ui:WixUI Id="InstallDir" InstallDirectory="INSTALLDIR" />
     <WixVariable Id="WixUILicenseRtf" Value="installer/License.rtf" />
     <WixVariable Id="WixUIBannerBmp" Value="client\app\favicon.ico" />
 
